Se agregó un H1 al index

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Primer proyecto con GIT</title>
 </head>
 <body>
-    
+    <h1>Primera Página</h1>
     <script src="app.js"></script>
 </body>
 </html>
